log
sá., 13 de sep. de 2025 23:03:05: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:60:18: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
     map->buckets = (Pair*) calloc(capacity, sizeof(Pair*));
                  ^
cc1.exe: all warnings being treated as errors
eeef3b7
sá., 13 de sep. de 2025 23:05:34: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9f8ea17
